.metals/metals.log
2024.12.11 13:18:15 INFO  Started: Metals version 1.3.5+171-b77fedf0-SNAPSHOT in folders 'C:\Users\sti\OneDrive - Leicom AG\Desktop\HTWG\Web_App\backend' for client Visual Studio Code - Insiders 1.96.0-insider.
2024.12.11 13:18:22 WARN  Flyway upgrade recommended: H2 2.3.232 is newer than this version of Flyway and support has not been tested. The latest supported version of H2 is 2.2.224.
2024.12.11 13:18:23 INFO  Attempting to connect to the build server...
2024.12.11 13:18:23 INFO  No running Bloop server found, starting one.
2024.12.11 13:18:36 INFO  Starting compilation server
2024.12.11 13:18:57 INFO  tracing is disabled for protocol BSP, to enable tracing of incoming and outgoing JSON messages create an empty file at C:\Users\sti\OneDrive - Leicom AG\Desktop\HTWG\Web_App\backend\.metals\bsp.trace.json or C:\Users\sti\AppData\Local\scalameta\metals\cache\bsp.trace.json
2024.12.11 13:19:00 INFO  Attempting to connect to the build server...
2024.12.11 13:19:00 INFO  Found a Bloop server running
2024.12.11 13:19:00 INFO  Attempting to connect to the build server...
2024.12.11 13:19:00 INFO  Found a Bloop server running
2024.12.11 13:19:02 INFO  tracing is disabled for protocol BSP, to enable tracing of incoming and outgoing JSON messages create an empty file at C:\Users\sti\OneDrive - Leicom AG\Desktop\HTWG\Web_App\backend\project\project\.metals\bsp.trace.json or C:\Users\sti\AppData\Local\scalameta\metals\cache\bsp.trace.json
2024.12.11 13:19:02 INFO  tracing is disabled for protocol BSP, to enable tracing of incoming and outgoing JSON messages create an empty file at C:\Users\sti\OneDrive - Leicom AG\Desktop\HTWG\Web_App\backend\project\.metals\bsp.trace.json or C:\Users\sti\AppData\Local\scalameta\metals\cache\bsp.trace.json
2024.12.11 13:19:06 INFO  time: Connected to build server in 42s
2024.12.11 13:19:06 INFO  Connected to Build server: Bloop v2.0.3
2024.12.11 13:19:08 INFO  time: Imported build in 1.39s
2024.12.11 13:19:09 INFO  running doctor check
2024.12.11 13:19:09 INFO  java targets: root-test, root, backend-build, backend-build-build
2024.12.11 13:25:09 ERROR Failed to resolve mtags for 2.13.12
java.util.concurrent.TimeoutException: Future timed out after [60 seconds]
	at scala.concurrent.impl.Promise$DefaultPromise.tryAwait0(Promise.scala:248)
	at scala.concurrent.impl.Promise$DefaultPromise.result(Promise.scala:261)
	at scala.concurrent.Await$.$anonfun$result$1(package.scala:201)
	at scala.concurrent.BlockContext$DefaultBlockContext$.blockOn(BlockContext.scala:62)
	at scala.concurrent.Await$.result(package.scala:124)
	at scala.meta.internal.metals.MtagsResolver$Default.fetch$1(MtagsResolver.scala:167)
	at scala.meta.internal.metals.MtagsResolver$Default.fetch$1(MtagsResolver.scala:178)
	at scala.meta.internal.metals.MtagsResolver$Default.fetch$1(MtagsResolver.scala:178)
	at scala.meta.internal.metals.MtagsResolver$Default.fetch$1(MtagsResolver.scala:178)
	at scala.meta.internal.metals.MtagsResolver$Default.fetch$1(MtagsResolver.scala:178)
	at scala.meta.internal.metals.MtagsResolver$Default.fetch$1(MtagsResolver.scala:178)
	at scala.meta.internal.metals.MtagsResolver$Default.$anonfun$resolve$8(MtagsResolver.scala:221)
	at java.util.concurrent.ConcurrentHashMap.compute(ConcurrentHashMap.java:1916)
	at scala.meta.internal.metals.MtagsResolver$Default.resolve(MtagsResolver.scala:219)
	at scala.meta.internal.metals.MtagsResolver$Default.resolve(MtagsResolver.scala:126)
	at scala.meta.internal.metals.MtagsResolver.isSupportedScalaVersion(MtagsResolver.scala:32)
	at scala.meta.internal.metals.MtagsResolver.isSupportedScalaVersion$(MtagsResolver.scala:29)
	at scala.meta.internal.metals.MtagsResolver$Default.isSupportedScalaVersion(MtagsResolver.scala:101)
	at scala.meta.internal.metals.doctor.ProblemResolver.isSupportedScalaVersion$1(ProblemResolver.scala:199)
	at scala.meta.internal.metals.doctor.ProblemResolver.findProblem(ProblemResolver.scala:203)
	at scala.meta.internal.metals.doctor.ProblemResolver.$anonfun$problemMessage$1(ProblemResolver.scala:67)
	at scala.collection.immutable.List.flatMap(List.scala:294)
	at scala.meta.internal.metals.doctor.ProblemResolver.problemMessage(ProblemResolver.scala:66)
	at scala.meta.internal.metals.doctor.Doctor.check(Doctor.scala:113)
	at scala.meta.internal.metals.MetalsLspService.check(MetalsLspService.scala:1567)
	at scala.meta.internal.metals.ProjectMetalsLspService.check(ProjectMetalsLspService.scala:823)
	at scala.meta.internal.metals.ProjectMetalsLspService.$anonfun$connectionProvider$1(ProjectMetalsLspService.scala:170)
	at scala.meta.internal.metals.Indexer.$anonfun$indexWorkspace$10(Indexer.scala:144)
	at scala.runtime.java8.JFunction0$mcV$sp.apply(JFunction0$mcV$sp.scala:18)
	at scala.meta.internal.metals.TimerProvider.timedThunk(TimerProvider.scala:25)
	at scala.meta.internal.metals.Indexer.indexWorkspace(Indexer.scala:144)
	at scala.meta.internal.metals.Indexer.$anonfun$profiledIndexWorkspace$2(Indexer.scala:57)
	at scala.runtime.java8.JFunction0$mcV$sp.apply(JFunction0$mcV$sp.scala:18)
	at scala.meta.internal.metals.TimerProvider.timedThunk(TimerProvider.scala:25)
	at scala.meta.internal.metals.Indexer.$anonfun$profiledIndexWorkspace$1(Indexer.scala:57)
	at scala.runtime.java8.JFunction0$mcV$sp.apply(JFunction0$mcV$sp.scala:18)
	at scala.concurrent.Future$.$anonfun$apply$1(Future.scala:687)
	at scala.concurrent.impl.Promise$Transformation.run(Promise.scala:467)
	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
	at java.lang.Thread.run(Thread.java:833)

2024.12.11 13:25:09 WARN  2.12.16 is no longer supported in the current Metals versions, using the last known supported version 1.3.5
2024.12.11 13:25:39 WARN  Flyway upgrade recommended: H2 2.3.232 is newer than this version of Flyway and support has not been tested. The latest supported version of H2 is 2.2.224.
2024.12.11 13:26:14 INFO  time: indexed workspace in 7m6s
2024.12.11 20:03:44 INFO  compiling root (21 scala sources and 1 java source)
Dez. 11, 2024 8:03:46 PM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNUNG: Unmatched cancel notification for request id 4
2024.12.11 20:04:30 WARN  Unexpected javac output: WARNING: An illegal reflective access operation has occurred
WARNING: Illegal reflective access by com.sourcegraph.shaded.com.sourcegraph.semanticdb_javac.SemanticdbJavacOptions (file:/C:/Users/sti/AppData/Local/bloop/cache/semanticdb/com.sourcegraph.semanticdb-javac.0.10.3/semanticdb-javac-0.10.3.jar) to method com.sun.tools.javac.api.BasicJavacTask.getContext()
WARNING: Please consider reporting this to the maintainers of com.sourcegraph.shaded.com.sourcegraph.semanticdb_javac.SemanticdbJavacOptions
WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
WARNING: All illegal access operations will be denied in a future release
C:\Users\sti\OneDrive - Leicom AG\Desktop\HTWG\Web_App\backend\target\scala-2.13\routes\main\controllers\routes.java:4: error: semanticdb-javac: unknown flag '-'
package controllers;
^
C:\Users\sti\OneDrive - Leicom AG\Desktop\HTWG\Web_App\backend\target\scala-2.13\routes\main\controllers\routes.java:4: error: semanticdb-javac: unknown flag 'Leicom'
package controllers;
^
C:\Users\sti\OneDrive - Leicom AG\Desktop\HTWG\Web_App\backend\target\scala-2.13\routes\main\controllers\routes.java:4: error: semanticdb-javac: unknown flag 'AG/Desktop/HTWG/Web_App/backend'
package controllers;
^
3 errors.
2024.12.11 20:04:30 WARN  javac exited with exit code 1
2024.12.11 20:04:30 INFO  time: compiled root in 46s
2024.12.11 20:04:31 WARN  Could not load snapshot text for C:\Users\sti\OneDrive - Leicom AG\Desktop\HTWG\Web_App\backend\app\repositories\CandlesRepository.scala
2024.12.11 20:05:25 WARN  Could not load snapshot text for C:\Users\sti\OneDrive - Leicom AG\Desktop\HTWG\Web_App\backend\app\controllers\CandlesticksController.scala
2024.12.11 20:05:26 WARN  Could not load snapshot text for C:\Users\sti\OneDrive - Leicom AG\Desktop\HTWG\Web_App\backend\app\controllers\CandlesticksController.scala
Dez. 11, 2024 8:05:27 PM org.eclipse.lsp4j.jsonrpc.RemoteEndpoint handleCancellation
WARNUNG: Unmatched cancel notification for request id 102
2024.12.11 20:09:26 WARN  Could not load snapshot text for C:\Users\sti\OneDrive - Leicom AG\Desktop\HTWG\Web_App\backend\app\controllers\CandlesticksController.scala
